Backport implementation of bug 259768: "Use optimal jobs number: highly misleading" from 8.1 to 8.0.
Change-Id: I5a3d33b21b306b30411dc6eb2325d77d0383c9bf